# django-2-daoolet

./: db.sqlite3  pyproject.toml
news/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_created_at_comments.py  0003_comment_delete_comments.py
news/templates/news/: base.html  detail.html  index.html  post_news.html  update_news.html
news/templates/registration/: login.html  sign_up.html
project/: settings.py  urls.py
